--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
       </div>
 
       <div class="d-flex">
-        <button id="sortDecrease" class="btn btn-success mb-5">
+        <button id="sortDecrease" class="btnmb-5">
           Price Low to High
         </button>
-       <button id="sortIncrease" class="btn btn-success mb-5">
+       <button id="sortIncrease" class="btnmb-5">
           Price High to Low
         </button>
 
